<resources>
    <string name="app_name">LaskujenJako</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="summa_yhteensa">Laskun summa yhteensä</string>
    <string name="seuraava_nappi">Seuraava</string>
    <string name="janne_nappi">Person 1</string>
    <string name="fanny_nappi">Person 2</string>
    <string name="nollaa_nappi">Nollaa</string>
    <string name="kopioi_nappiF">Kopioi leikepöydälle Person 1</string>
    <string name="kopioi_nappiJ">Kopioi leikepöydälle Person 2</string>
    <string name="kaynnista_nappi">Käynnistä SplitWise</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
